@@ -1,3 +1,7 @@
+SimpleComplex/Utils 1.x, 2019-01-18
+-----------------------------------
+- CLI echoMessage() status argument must support all syslog severity levels.
+
 SimpleComplex/Utils 1.x, 2019-01-04
 -----------------------------------
 - Deprecate Time methods getDateISOlocal, getTimeISOlocal, getDateTimeISOlocal
